[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-check"
version = "1.0.0"
description = "Find your Wikipedia-used Wikimedia Commons photos and add your photographer category, with human approval."
readme = {file = "README.org", content-type = "text/plain"}
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Jay Dixit", email = "jay@wikiportraits.org"}]
keywords = ["wikimedia", "commons", "wikipedia", "photography", "categories", "attribution", "glam"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "prompt_toolkit>=3,<4",
    "questionary>=2,<3",
]

[project.scripts]
credit-check = "credit_check:main"

[tool.setuptools]
py-modules = ["credit_check"]
