[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-check"
version = "1.1.3"
description = "Keep track of which Wikipedia articles use your photos."
readme = {file = "README.org", content-type = "text/plain"}
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Jay Dixit", email = "jay@wikiportraits.org"}]
keywords = ["wikimedia", "commons", "wikipedia", "photography", "categories", "attribution", "glam"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "prompt_toolkit>=3,<4",
    "questionary>=2,<3",
]

[project.scripts]
credit-check = "credit_check:main"

[tool.setuptools]
py-modules = ["credit_check"]
